--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,13 @@ repositories {
         url = "https://oss.sonatype.org/content/repositories/snapshots/"
     }
     flatDir { dirs 'lib' }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     compileOnly "org.spigotmc:spigot-api:1.14.4-R0.1-SNAPSHOT"
     compile project(':jbutil')
     compile project(':chaosmcutil')
+    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
     compile fileTree(dir: 'libs', include: '*.jar')
 }
